Link SG Public Home Trends dash with Truly Homes Dashboard

--- a/templates/dash_page.html
+++ b/templates/dash_page.html
@@ -18,6 +18,11 @@
         past and near future. <b>This website is best viewed on desktop, as this
             will be the best way to view the charts below.</b>
     </p>
+    <p class='pt-2 italic'>
+        Want to search for specific public housing resale transactions in the
+        past 6 months? Head to my other
+        <u><a href="https://sg-housing.onrender.com">dashboard</a></u> instead!
+    </p>
     <div>
         {{ gh_html_content_1 | safe }}
     </div>
