Add property blog backfill

--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -1,25 +1,30 @@
 <html>
 
 <head>
-    {% if metadata %}
-    <title>{{ metadata.title|default("Cliff Chew") }}</title>
-    {% elif title %}
-    <title>{{ title }}</title>
-    {% else %}
-    <title>Cliff</title>
-    {% endif %}
+    <title>Data Analytics on the Singapore Housing Market</title>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="color-scheme" content="light dark" />
     <link href="https://cdn.jsdelivr.net/npm/@picocss/pico@2/css/pico.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="/static/tw_styles.css">
 </head>
 
 <body>
     <main class="container">
         <header>
-            <h1><a href="{{ url_for('blog_index') }}">Cliff Chew</a></h1>
-            <p>
+            <div class='flex'>
+                <h1 class="text-xl underline font-bold pr-2">
+                    <a href="/sg-public-home-trends">Public Home Trends</a>
+                </h1>
+                <h1 class="text-xl underline font-bold px-2">
+                    <a href="/">Public Home Search</a>
+                </h1>
+                <h1 class="text-xl underline font-bold px-2">
+                    <a href="{{ url_for('blog_index') }}">Blog</a>
+                </h1>
+            </div>
+            <p class="underline font-bold">
                 <a href="{{ url_for('blog_posts') }}">
                     Posts
                 </a>
@@ -33,7 +38,7 @@
             {% block content required %}{% endblock content %}
         </main>
         <footer>
-            <p>All rights reserved {% now 'utc', '%Y' %}, Daniel Roy Greenfeld</p>
+            <p class="text-xs">All rights reserved {% now 'utc', '%Y' %}, Daniel Roy Greenfeld</p>
         </footer>
     </main>
 </body>
