--- a/templates/index.html
+++ b/templates/index.html
@@ -1,14 +1,14 @@
-{% set title = "Daniel Roy Greenfeld" %}
+{% include 'header.html' %}
 {% extends "layout/base.html" %}
 {% block content %}
-<h1>Recent Writings</h1>
+<h1 class='text-xl pt-4 pb-2 font-bold'>Recent Writings</h1>
 
 {% for post in recent_3 %}
 {% include "partials/_post_short.html" %}
 {% endfor %}
 
 {% if favorite_posts | length > 0 %}
-<h1>Favorite Articles</h1>
+<h1 class='text-xl pt-4 pb-2'>Favorite Articles</h1>
 {% endif %}
 
 {% for post in favorite_posts %}
