--- a/templates/dash_page.html
+++ b/templates/dash_page.html
@@ -1,4 +1,5 @@
 {% include 'header.html' %}
+{% include 'navbar.html' %}
 
 <body class="p-4">
     <h2 class="text-2xl font-bold mb-4">Singapore Public Home Trends !!</h2>
