--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,14 +1,14 @@
-<div class="flex justify-between h-8 mx-auto bg-red-600">
-    <nav class="w-screen h-8 flex items-center justify-between">
-        <ul class="menu menu-horizontal mx-auto z-50 text-lg text-white items-cenhidden lg:flex">
+<div class="flex justify-between py-4 mx-auto bg-red-600">
+    <nav class="w-screen flex items-center justify-start">
+        <ul class="menu menu-horizontal ml-4 z-50 text-lg text-white items-center flex">
             <h1 class="text-xl underline pr-2">
                 <a href="/sg-public-home-trends">Public Home Trends</a>
             </h1>
             <h1 class="text-xl underline px-2">
-                <a href="/">Public Home Search</a>
+                <a href="/">Past Public Home Sales</a>
             </h1>
             <h1 class="text-xl underline px-2">
-                <a href="{{ url_for('blog_index') }}">Articles</a>
+                <a href="{{ url_for('blog_index') }}">Blog Posts</a>
             </h1>
         </ul>
     </nav>
