--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -2,13 +2,13 @@
     <nav class="w-screen flex items-center justify-start">
         <ul class="menu menu-horizontal ml-4 z-50 text-lg text-white items-center flex">
             <h1 class="text-xl underline pr-2">
-                <a href="/sg-public-home-trends">Public Home Trends</a>
+                <a href="/sg-public-home-trends">Trends</a>
             </h1>
             <h1 class="text-xl underline px-2">
-                <a href="/">Past Public Home Sales</a>
+                <a href="/">Homes Truly</a>
             </h1>
             <h1 class="text-xl underline px-2">
-                <a href="{{ url_for('blog_index') }}">Blog Posts</a>
+                <a href="{{ url_for('blog_index') }}">Posts</a>
             </h1>
         </ul>
     </nav>
