--- a/templates/partials/_post_short.html
+++ b/templates/partials/_post_short.html
@@ -1,14 +1,16 @@
 <post>
-    <h2 class='underline text-bold'>
+    <h2 class='underline font-bold text-red-600'>
         <a href="{{ url_for('blog_post', post_id=post.slug) }}">{{ post.title }}</a>
     </h2>
     <p class="pb-4 text-base">
         {% if post.description %}
         {{ post.description }}<br />
         {% endif %}
-        <small><time datetime="{{ post.date }}">{{ post.date }}</time><br>
-            Tags: {% for tag in post.tags %}
-            <a href="{{ url_for('blog_tag', tag_id=tag) }}">{{ tag }}</a>
+        <small>
+            <time datetime="{{ post.date }}">{{ post.date }}</time><br>
+            <b>Tags</b>: {% for tag in post.tags %}
+            <a class='underline text-red-600' href="{{ url_for('blog_tag', tag_id=tag) }}">{{ tag }}
+            </a> |
             {% endfor %}
         </small>
     </p>
