--- a/templates/tag.html
+++ b/templates/tag.html
@@ -1,6 +1,8 @@
 {% extends "layout/base.html" %}
 {% block content %}
-<h1>Tags: {{ tag }} ({{ posts|length() }})</h1>
+<h1 class="text-xl font-bold py-2">
+    Tags: {{ tag }} ({{ posts|length() }})
+</h1>
 
 {% for post in posts %}
     {% include "partials/_post_short.html" %}
