--- a/templates/tags.html
+++ b/templates/tags.html
@@ -1,8 +1,11 @@
 {% extends "layout/base.html" %}
 {% block content %}
-<h1>Tags</h1>
+<h1 class='text-xl font-bold'>Tags</h1>
 
+<p class='pb-4'>
 {% for tag, count in tags.items() %}
-  <a href="{{ url_for('blog_tag', tag_id=tag) }}">{{ tag }}</a> ({{ count }})
+  <a class='underline' href="{{ url_for('blog_tag', tag_id=tag) }}">{{ tag }}</a> ({{ count }})
+    | 
 {% endfor %}
+</p>
 {% endblock content %}
