--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -8,7 +8,7 @@
                 <a href="/">Homes Truly</a>
             </h1>
             <h1 class="text-xl underline px-2">
-                <a href="{{ url_for('blog_index') }}">Posts</a>
+                <a href="{{ url_for('blog_index') }}">Posts [WIP]</a>
             </h1>
         </ul>
     </nav>
