Refactored if df is not None logic and fixed iframe scroll bar issue

--- a/templates/house_dash.html
+++ b/templates/house_dash.html
@@ -1,11 +1,15 @@
 <style>
+    html,
     body {
         margin: 0;
+        padding: 0;
+        overflow: hidden;
+        height: 100%;
     }
 
     iframe {
         display: block;
-        height: 100vh;
+        height: 95vh;
         width: 100vw;
         border: none;
     }
