--- a/assets/style.css
+++ b/assets/style.css
@@ -11,3 +11,16 @@
 .Select-value {
     background-color: white !important;
 }
+
+button:hover {
+    background-color: black;
+    color: white;
+    cursor: pointer;
+    border: 1px solid #B80D0D;
+}
+
+button {
+    background-color: #e57373;
+    color: white;
+    border: 1px solid #d32f2f;
+}
