Update public_ to public-

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -5,10 +5,10 @@
                 <a href="/sg-public-home-trends">Public Home Trends</a>
             </h1>
             <h1 class="text-xl underline px-2">
-                <a href="/public_homes">Public Homes Sales</a>
+                <a href="/public-homes">Public Homes Sales</a>
             </h1>
             <!-- <h1 class="text-xl underline px-2"> -->
-            <!--     <a href="/private_homes">Private Home Sales</a> -->
+            <!--     <a href="/private-homes">Private Home Sales</a> -->
             <!-- </h1> -->
             <h1 class="text-xl underline px-2">
                 <a href="{{ url_for('blog_index') }}">Posts [WIP]</a>
