--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -11,7 +11,7 @@
             <!--     <a href="/private-homes">Private Home Sales</a> -->
             <!-- </h1> -->
             <h1 class="text-xl underline px-2">
-                <a href="{{ url_for('blog_index') }}">Posts [WIP]</a>
+                <a href="{{ url_for('blog_index') }}">Posts</a>
             </h1>
         </ul>
     </nav>
