Fix public home trends dashboard

--- a/templates/dash_v2.html
+++ b/templates/dash_v2.html
@@ -26,7 +26,7 @@
             <u><a href="https://sg-housing.onrender.com">dashboard</a></u> instead!
         </p>
         <div>
-            {{ gh_html_content_1 | safe }}
+            {{ price_dist | safe }}
         </div>
 
         <p>
@@ -51,7 +51,7 @@
             this.
         </p>
         <div>
-            {{ gh_html_content_2 | safe }}
+            {{ mil_bar_chart | safe }}
         </div>
         <p>
             I also overlapped a bar and line chart that tracks total number of
@@ -66,7 +66,7 @@
             trend can be a bit worrying for some.
         </p>
         <div>
-            {{ gh_html_content_3 | safe }}
+            {{ price_grp_counts | safe }}
         </div>
         <p>
             This stacked bar chart shows the number of public home sales, grouped
@@ -80,7 +80,7 @@
             sold that are less than 300K in recent months.
         </p>
         <div>
-            {{ gh_html_content_4 | safe }}
+            {{ price_grp_percent | safe }}
         </div>
         <p>
             This chart is similar to the one above, but looks at percentages
