--- a/templates/dash_v2.html
+++ b/templates/dash_v2.html
@@ -23,7 +23,7 @@
         <p class='pt-2 italic'>
             Want to search for specific public housing resale transactions in the
             past 6 months? Head to my other
-            <u><a href="https://sg-housing.onrender.com">dashboard</a></u> instead!
+            <u><a href="https://sg-housing.onrender.com/public-homes">dashboard</a></u> instead!
         </p>
         <div>
             {{ price_dist | safe }}
