--- a/templates/dash_v2.html
+++ b/templates/dash_v2.html
@@ -5,93 +5,83 @@
     <div class="p-4">
         <h2 class="text-2xl font-bold mb-4">Singapore Public Home Trends !!</h2>
         <p>
-            Singapore's public housing policies are internationally acclaimed, with
-            many attributing our economic miracle to our public housing policies.
-            However, as Singapore marches on form the effects of COVID-19, there
-            has been more discussions the rising public homes in Singapore. Since
-            the public home resale data set available to public, I wanted to let the
-            data speak for itself ( Kudos to the work of our Singapore's,
-            <u><a href="https://beta.data.gov.sg/datasets?query=resale+flats+transactions&resultId=d_8b84c4ee58e3cfc0ece0d773c8ca6abc"
-                    target="_blank">data.gov.sg</a></u> and our Housing Development
-            Board ( HDB ) for releasing the data to the public ). Hence, I created
-            some dashboards to track some interesting trends of our public housing
-            market. These few charts were created by me, based on what I feel I want
-            to understand about our Singapore public housing market of the recent
-            past and near future. <b>This website is best viewed on desktop, as this
-                will be the best way to view the charts below.</b>
+            Singapore's public housing is internationally acclaimed, and
+            many attribute Singapore's economic miracle to our housing policies.
+            However, as Singapore marches on from the effects of COVID-19, there
+            has been rising concerns of rising public housing prices in Singapore.
+            Since the data is publicly available, I wanted to let it speak for
+            itself. <i>Kudos to
+                <u><a href="https://beta.data.gov.sg/datasets?query=resale+flats+transactions&resultId=d_8b84c4ee58e3cfc0ece0d773c8ca6abc"
+                        target="_blank">data.gov.sg</a></u> and our Housing Development
+                Board ( HDB ) for releasing this data.</i>
+        </p>
+        <p class="pt-2">
+            <b>I created these charts to track some of these public housing resale trends
+                of the recent past and future. Hopefully these trends will be as interesting
+                to you as well. Best viewed on desktop to see the charts properly.</b>
         </p>
         <p class='pt-2 italic'>
-            Want to search for specific public housing resale transactions in the
-            past 6 months? Head to my other
-            <u><a href="https://sg-housing.onrender.com/public-homes">dashboard</a></u> instead!
+            Searching for public housing resale transactions of the past 6 months? Head to
+            <u><a href="https://sg-housing.onrender.com/public-homes">here</a></u> instead!
         </p>
         <div>
             {{ price_dist | safe }}
         </div>
 
         <p>
-            Instead of focusing on a single metric like median or mean prices, <b>
-                I wanted to see the distribution of public resale prices across
-                months and quarters.</b> Boxplot charts do this well because they
-            show median prices, 25th and 75th percentile, and any outliers within
-            that group. Periods where the median public home prices are greater
-            than 500K SGD are shown in red, and we can see that this reflects all
-            recent periods. Our boxplots also show that the separation between the
-            expensive and cheap public homes have increased in the past few years.
-            Do we still have affordable public homes? Yes. But are some of our
-            public homes getting more and more expensive? That seems to be yes too.
+            Instead of focusing on single metrics like median or mean, <b>
+                I wanted to see public resale price distributions across months.
+            </b> Boxplots adequately show median prices, 25th and 75th percentile,
+            and outliers. Median public home prices have been greater than 500K
+            SGD ( red ) since Oct 2021, while we see more expensive public resale
+            flats during this same period. Do we still have affordable public
+            homes? Yes! But there are also more expensive public resale flats
+            along the way!
         </p>
         <p class="italic font-bold text-sm pt-2">
-            Note: Don't see an interesting transaction? While doing my charts, I
-            realised a particular <u><a
-                    href="https://mothership.sg/2024/07/skyoasis-dawson-sold-record-most-expensive-hdb-flat/?fbclid=IwZXh0bgNhZW0CMTEAAR1Eg8p4mXmNSMjoH--e3NwMjjXM-LCG5-57p2Z5EUcdi5kXXsUlz4m0hak_aem_eYP-OBW7Q8bc9xXEMmvzlQ">
-                    SGD 1.73 million transaction</a></u> that has been reported
-            in different media outlets, but which doesn't seem to exist in this
-            data set. As of 5th August 2024, I am still checking with HDB about
-            this.
-        </p>
+            Note: Don't see an interesting transaction? I realised a particular <u><a
+                    href="https://mothership.sg/2024/07/skyoasis-dawson-sold-record-most-expensive-hdb-flat">
+                    SGD 1.73 million transaction</a></u> that was reported in
+            the media, but doesn't exist in this data set.</p>
         <div>
             {{ mil_bar_chart | safe }}
         </div>
         <p>
-            I also overlapped a bar and line chart that tracks total number of
-            million public dollar homes and the percentage of million dollar public
-            homes over total public homes sold. <b>Not only we see a rising number of
-                million dollar public homes sold Singapore, there is also a growing
-                trend of these million dollar homes forming a larger percentage of
-                overall public homes sold in Singapore.</b> As recent as 2020, million
-            dollar public homes only make up less than 1% of all public homes sold,
-            and now, this percentage can easily be above 2-3% in any given period.
-            That said, this percentage is still relatively small, but the growing
-            trend can be a bit worrying for some.
+            I overlapped a bar and line chart that tracks total public resale
+            homes sold and the percentage of million dollar public homes over
+            total public homes sold. <b>Here, we see that while public resale
+                home transactions have remained stable, percentage of million
+                dollar public resale flats have increased sharply.</b> As recent
+            as 2020, million dollar public homes only make up less than 1% of
+            all public homes sold. This percentage is easily 3-4% in recent
+            months. While the percentage is relatively small, its growing trend
+            is worrying.
         </p>
         <div>
             {{ price_grp_counts | safe }}
         </div>
         <p>
-            This stacked bar chart shows the number of public home sales, grouped
-            by price categories determined by me. I did these price categories
-            using my own intuitions on what makes sense. I wanted this view to go
-            beyond looking at million dollar homes, and focus on the overall market
-            structure of our public housing market. <b>We see growing number of
-                public home sales that are in the range of SGD 500-800k, SGD
-                800K-1M and SGD less than 1M.</b> There is also a shrinking number
-            of public homes sold between SGD 300-500K, and barely any public homes
-            sold that are less than 300K in recent months.
+            This stacked bar chart shows the number of public home sales
+            by price categories. I wanted a view to go beyond million dollar homes
+            and focus on the overall market structure of our public housing market.
+            <b>We see growing number of public home sales in the range of SGD
+                500-800k, SGD 800K-1M and SGD less than 1M.</b> There is also a
+            shrinking number of public homes sold between SGD 300-500K, and barely
+            any public homes that are sold at less than SGD 300K in recent months.
         </p>
         <div>
             {{ price_grp_percent | safe }}
         </div>
         <p>
-            This chart is similar to the one above, but looks at percentages
+            Finally, this chart is similar to the one above, but looks at percentages
             instead. This is to allow changes in proportions across different price
-            categories even more obvious. <b>We can see that expensive public home
+            categories to be more obvious. <b>We see that expensive public home
                 sales are forming a larger proportion of sales in the resale market.
-            </b> Similar to the trend caught above, the percentage of greater than
-            1 million dollar public homes is still quite small, but the growing
-            trend does seem a bit worrying. <b>And similar to above, we see growing
-                number of public home sales that are 500K SGD and above, and a
-                declining proportion that are less than 500K SGD.</b>
+            </b> Similar to the trends above, the percentage of greater than
+            1 million dollar public homes is still quite small, but its growing
+            trend is worrying to me. <b>Similarly, there is a growing percentage
+                of public home sales that are SGD 500K and above, and a declining
+                percentage that are less than SGD 500K.</b>
         </p>
     </div>
 </body>
